fix:project item with too narrow

--- a/src/renderer/screens/config/ConfigScreen.scss
+++ b/src/renderer/screens/config/ConfigScreen.scss
@@ -230,6 +230,7 @@
 
     .projectItemContainer {
       display: inline-block;
+      width: 100%;
     }
     .projectItem {
       padding: .25rem;
